@@ -75,12 +75,6 @@ def format_lines(statements, lines):
     return ret
 
 
-def short_stack():                                          # pragma: debugging
-    """Return a string summarizing the call stack."""
-    stack = inspect.stack()[:0:-1]
-    return "\n".join("%30s : %s @%d" % (t[3], t[1], t[2]) for t in stack)
-
-
 def expensive(fn):
     """A decorator to cache the result of an expensive operation.
 
